--- a/react-webpack/public/backend/templates/administrator/navbar.html
+++ b/react-webpack/public/backend/templates/administrator/navbar.html
@@ -99,7 +99,7 @@
                 <li><a href="#" class="block px-4 py-2 hover:bg-gray-100">Lịch sử hoạt động</a></li>
                 <li><a href="#" class="block px-4 py-2 hover:bg-gray-100">Bảo mật</a></li>
                 <li><a href="#" class="block px-4 py-2 hover:bg-gray-100">Cài đặt</a></li>
-                <li><a href="#" class="block px-4 py-2 hover:bg-gray-100">Năng suất</a></li>
+                <li><a href="#" class="block px-4 py-2 hover:bg-gray-100">Đăng suất</a></li>
               </ul>
             </div>
             <script>
