--- a/react-webpack/public/backend/templates/user_dashboard.html
+++ b/react-webpack/public/backend/templates/user_dashboard.html
@@ -155,6 +155,18 @@
 					<div class="text">Lịch sử giao dịch</div>
 				</div>
 			</div>
+			<div
+				style="
+					width: 1310px;
+					height: 165vh;
+					background-color: white;
+					position: absolute;
+					left: 191px;
+					top: 104px;
+					z-index: 1;
+					border-radius: 10px; /* Bo góc */
+					box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15); /* Đổ bóng */
+				"></div>
 			<p
 				class="two-digit-time-cell"
 				style="top: 137px; left: 210px; width: 80px">
@@ -188,164 +200,7 @@
 					<div>TH 6 <br />15</div>
 					<div>TH 7 <br />16</div>
 				</div>
-				<div class="calendar-body">
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell">
-						<div
-							class="event yellow"
-							style="top: 5px; left: 4px; width: 90%; height: 170%">
-							Trận đá bóng<br />7 - 9 AM
-						</div>
-					</div>
-
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell">
-						<div
-							class="event red"
-							style="top: 5px; left: 4px; width: 90%; height: 170%">
-							Trận bóng rổ<br />8 - 10 AM
-						</div>
-					</div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell">
-						<div
-							class="event blue"
-							style="top: 5px; left: 4px; width: 90%; height: 72%">
-							Trận đá bóng<br />14 - 15 PM
-						</div>
-					</div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell">
-						<div
-							class="event green"
-							style="top: 5px; left: 4px; width: 90%; height: 72%">
-							Trận cầu lông<br />16 - 17 PM
-						</div>
-					</div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-					<div class="calendar-cell"></div>
-				</div>
+				<div class="calendar-body"></div>
 			</div>
 		</div>
 		<script>
@@ -523,10 +378,25 @@
 				<div class="calendar-cell"></div>
 				<div class="calendar-cell"></div>
 				<div class="calendar-cell"></div>
+				<div class="calendar-cell"></div>
+				<div class="calendar-cell"></div>
+				<div class="calendar-cell"></div>
+				<div class="calendar-cell"></div>
+				<div class="calendar-cell"></div>
+				<div class="calendar-cell"></div>
+				<div class="calendar-cell"></div>
+				<div class="calendar-cell"></div>
+				<div class="calendar-cell"></div>
+				<div class="calendar-cell"></div>
+				<div class="calendar-cell"></div>
+				<div class="calendar-cell"></div>
+				<div class="calendar-cell"></div>
+				<div class="calendar-cell"></div>
+				<div class="calendar-cell"></div>
 			`;
 				} else {
 					// Nếu không phải tuần này thì hiển thị ô trống
-					for (let i = 0; i < 119; i++) {
+					for (let i = 0; i < 126; i++) {
 						calendarBody.innerHTML += '<div class="calendar-cell"></div>';
 					}
 				}
