--- a/react-webpack/public/backend/static/css/user_dashboard.css
+++ b/react-webpack/public/backend/static/css/user_dashboard.css
@@ -7,7 +7,7 @@
 .main-wrapper {
 	display: grid;
 	grid-template-columns: 13% 55% 25%; /* Sidebar nhỏ, nội dung lớn, cột xác nhận nhỏ */
-	height: 180vh;
+	height: 1250px;
 	gap: 20px;
 }
 
@@ -17,6 +17,7 @@
 	width: 40px;
 	height: 20px;
 	left: 240px;
+	z-index: 3;
 }
 .two-digit-time-cell {
 	font-family: "Lato";
@@ -25,6 +26,7 @@
 	width: 50px;
 	height: 20px;
 	left: 232px;
+	z-index: 3;
 }
 .calendar-bar {
 	background-color: #00224e;
@@ -32,9 +34,9 @@
 	margin-top: 3px;
 	border: 1px solid #ddd;
 	overflow: hidden;
-	height: 6vh;
+	height: 43px;
 	position: absolute;
-	z-index: 1;
+	z-index: 2;
 	left: 190px;
 	display: flex;
 	align-items: center;
@@ -70,7 +72,7 @@
 	border: 1px solid #ddd;
 	border-radius: 0px;
 	overflow: hidden;
-	height: 163vh;
+	height: 1127px;
 	background-color: white;
 	position: relative;
 	z-index: 1;
@@ -79,7 +81,7 @@
 	height: 30px;
 	display: grid;
 	grid-template-columns: repeat(7, 1fr);
-	background-color: #f1f1f1;
+	background-color: #e2dcdc;
 	padding: 10px 0;
 	text-align: center;
 	font-weight: bold;
