user dashboard ver 2

--- a/react-webpack/public/backend/templates/user_dashboard.html
+++ b/react-webpack/public/backend/templates/user_dashboard.html
@@ -158,7 +158,7 @@
 			<div
 				style="
 					width: 1310px;
-					height: 165vh;
+					height: 1170px;
 					background-color: white;
 					position: absolute;
 					left: 191px;
