--- a/react-webpack/public/backend/templates/user_dashboard.html
+++ b/react-webpack/public/backend/templates/user_dashboard.html
@@ -136,7 +136,8 @@
 				<div class="menu-item">
 					<div class="icon">
 						<img
-							src="{{ url_for('static', filename='images/icon_history_book_field.png') }}" />
+							src="{{ url_for('static', filename='images/icon_history_book_field.png') }}" class="abc" />
+							
 					</div>
 					<div class="text">Lịch sử đặt sân</div>
 				</div>
