--- a/react-webpack/public/backend/templates/booking_history.html
+++ b/react-webpack/public/backend/templates/booking_history.html
@@ -128,6 +128,7 @@
           <div class="icon">
             <img
               src="{{ url_for('static', filename='images/icon_history_book_field.png') }}"
+              class="abc"
             />
           </div>
           <div class="text">Lịch sử đặt sân</div>
