--- a/react-webpack/public/backend/templates/deposit.html
+++ b/react-webpack/public/backend/templates/deposit.html
@@ -6,7 +6,7 @@
     <title>Trang chủ người dùng</title>
     <link
       rel="stylesheet"
-      href="{{ url_for('static', filename='css/nav_bar.css') }}"
+      href="{{ url_for('static', filename='css/nav_bar_deposit.css') }}"
     />
     <link
       rel="stylesheet"
