--- a/react-webpack/public/backend/templates/user_dashboard.html
+++ b/react-webpack/public/backend/templates/user_dashboard.html
@@ -13,7 +13,7 @@
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
 		<link
 			rel="stylesheet"
-			href="{{ url_for('static', filename='css/nav_bar.css') }}" />
+			href="{{ url_for('static', filename='css/nav_bar_deposit.css') }}" />
 		<link
 			rel="stylesheet"
 			href="{{ url_for('static', filename='css/user_dashboard.css') }}" />
