--- a/react-webpack/public/backend/templates/booking_history.html
+++ b/react-webpack/public/backend/templates/booking_history.html
@@ -124,7 +124,7 @@
           </div>
           <div class="text">Đặt sân</div>
         </div>
-        <div class="menu-item">
+        <div class="menu-item" style="background-color: rgb(14, 1, 87)">
           <div class="icon">
             <img
               src="{{ url_for('static', filename='images/icon_history_book_field.png') }}"
