--- a/react-webpack/public/backend/templates/deposit.html
+++ b/react-webpack/public/backend/templates/deposit.html
@@ -49,8 +49,8 @@
       </div>
       <!-- Navigation Links -->
       <div class="nav-links">
-        <a href="#" class="nav-item">Trang chủ</a>
-        <a href="#" class="nav-item">Bạn bè</a>
+        <a href="#" class="nav-item" style="width: 90px">Trang chủ</a>
+        <a href="#" class="nav-item" style="width: 60px">Bạn bè</a>
         <a href="#" class="nav-item">Blog</a>
       </div>
       <!-- Profile Section -->
@@ -133,7 +133,7 @@
           </div>
           <div class="text">Lịch sử đặt sân</div>
         </div>
-        <div class="menu-item">
+        <div class="menu-item" style="background-color: rgb(14, 1, 87)">
           <div class="icon">
             <img
               src="{{ url_for('static', filename='images/icon_deposit.png') }}"
