--- a/react-webpack/public/backend/templates/transaction_history.html
+++ b/react-webpack/public/backend/templates/transaction_history.html
@@ -141,7 +141,7 @@
           </div>
           <div class="text">Nạp tiền</div>
         </div>
-        <div class="menu-item">
+        <div class="menu-item" style="background-color: rgb(14, 1, 87)">
           <div class="icon">
             <img
               src="{{ url_for('static', filename='images/icon_payment_history.png') }}"
