--- a/react-webpack/public/backend/templates/owner_deposit.html
+++ b/react-webpack/public/backend/templates/owner_deposit.html
@@ -106,7 +106,7 @@
               </div>
               <div class="text">Lịch</div>
           </a>
-          <a href="#" class="menu-item">
+          <a href="ownerdeposit" class="menu-item">
               <div class="icon">
                   <img src="{{ url_for('static', filename='images/icon_payment_history.png') }}" alt="Lịch sử giao dịch Icon"/>
               </div>
@@ -118,10 +118,7 @@
     <div class="main-content">
       <div class="header">
         <div>
-          <h3>Lịch sử đặt sân</h3>
-          Số dư: 125.000 VND <br>
-          Khoảng thời gian<br>
-          27/09/2022 - 10/10/2022
+          <h3>Lịch sử giao dịch</h3>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            
         </div>
         <input type="text" class="search-bar" placeholder="Tìm Kiếm...">
       </div>
