--- a/react-webpack/public/backend/templates/owner_calendar_var2.html
+++ b/react-webpack/public/backend/templates/owner_calendar_var2.html
@@ -106,7 +106,7 @@
             </div>
             <div class="text">Lịch</div>
         </a>
-        <a href="#" class="menu-item">
+        <a href="ownerdeposit" class="menu-item">
             <div class="icon">
                 <img src="{{ url_for('static', filename='images/icon_payment_history.png') }}" alt="Lịch sử giao dịch Icon"/>
             </div>
