--- a/react-webpack/public/backend/templates/administrator/admin_manage_user.html
+++ b/react-webpack/public/backend/templates/administrator/admin_manage_user.html
@@ -263,23 +263,14 @@
                         <div class="flex gap-10 items-center mb-4">
                             <h2 class="text-lg font-semibold">Danh sách người dùng</h2>
                             <p class="text-2xl font-bold text-blue-500">145</p>
-                            <button 
-                                class="ml-auto flex items-center font-bold gap-2 p-2 bg-white border border-gray-300 rounded-full text-gray-700 hover:bg-gray-100">
-                                <!-- Biểu tượng Filter -->
-                                <svg 
-                                    xmlns="http://www.w3.org/2000/svg" 
-                                    class="w-6 h-6 text-black-500" 
-                                    viewBox="0 0 24 24" 
-                                    fill="none" 
-                                    stroke="currentColor" 
-                                    stroke-width="2">
-                                    <path 
-                                        stroke-linecap="round" 
-                                        stroke-linejoin="round" 
-                                        d="M3 4h18M6 8l6 6m0 0l6-6M6 8h12" />
-                                </svg>
-                                Lọc
-                            </button>
+                            <div class="ml-auto flex gap-10">
+                                <button class="text-blue-500 text-sm font-semibold hover:bg-blue-100 hover:shadow-md transition duration-300">
+                                    Thêm người
+                                </button>
+                                <button class="text-purple-500 text-sm font-semibold hover:bg-purple-100 hover:shadow-md transition duration-300">
+                                    Xóa người
+                                </button>
+                            </div>
                         </div>
                         
                         <div class="relative mb-4">
@@ -331,7 +322,7 @@
                         <table class="w-full text-sm text-left text-gray-500">
                             <thead class="text-xs text-gray-700 uppercase bg-gray-100">
                                 <tr>
-                                    <th scope="col" class="p-3">Người sử dụng</th>
+                                    <th scope="col" class="p-3 ">Người sử dụng</th>
                                     <th scope="col" class="p-3 text-center flex items-center justify-center">
                                         <svg 
                                             xmlns="http://www.w3.org/2000/svg" 
@@ -487,24 +478,13 @@
                     <div class="bg-white p-4 rounded-lg shadow-md mb-4" style="height: 770px;">
                         <div class="flex justify-between items-center mb-4">
                             <h2 class="text-lg font-semibold">Danh sách chủ sân</h2>
-                            <button 
-                                class="ml-4 flex items-center font-bold gap-2 p-2 bg-white border border-gray-300 rounded-full text-gray-700 hover:bg-gray-100">
-                                <!-- Biểu tượng Filter -->
-                                <svg 
-                                    xmlns="http://www.w3.org/2000/svg" 
-                                    class="w-5 h-5 text-black-500" 
-                                    viewBox="0 0 24 24" 
-                                    fill="none" 
-                                    stroke="currentColor" 
-                                    stroke-width="2">
-                                    <path 
-                                        stroke-linecap="round" 
-                                        stroke-linejoin="round" 
-                                        d="M3 4h18M6 8l6 6m0 0l6-6M6 8h12" />
-                                </svg>
-                                Lọc
+
+                            <button class="text-blue-500 text-sm font-semibold hover:bg-blue-100 hover:shadow-md transition duration-300">
+                                Thêm người
                             </button>
-                            <button class="text-blue-500 text-sm">Thêm người</button>
+                            <button class="text-purple-500 text-sm font-semibold hover:bg-purple-100 hover:shadow-md transition duration-300">
+                                Xóa người
+                            </button>
                         </div>
                         <div class="relative mb-4">
                             <!-- Ô tìm kiếm -->
