--- a/react-webpack/public/backend/templates/user_dashboard.html
+++ b/react-webpack/public/backend/templates/user_dashboard.html
@@ -118,7 +118,7 @@
 				<i class="fas fa-search" onclick="performSearch()"></i>
 			</div>
 
-			<div class="sidebar">
+			<!-- <div class="sidebar">
 				<div class="menu-item" style="background-color: rgb(14, 1, 87)">
 					<div class="icon">
 						<img
@@ -157,41 +157,31 @@
 					</div>
 					<div class="text">Lịch sử giao dịch</div>
 				</div>
+			</div> -->
+			<div class="under-calendar-bar">
+				<p
+					class="two-digit-time-cell"
+					style="top: 4.1%; left: 0.3%; width: 80px">
+					GMT +07
+				</p>
+				<p class="one-digit-time-cell" style="top: 6.3%">7 AM</p>
+				<p class="one-digit-time-cell" style="top: 8.3%">8 AM</p>
+				<p class="one-digit-time-cell" style="top: 10.3%">9 AM</p>
+				<p class="two-digit-time-cell" style="top: 12.3%">10 AM</p>
+				<p class="two-digit-time-cell" style="top: 14.3%">11 AM</p>
+				<p class="two-digit-time-cell" style="top: 16.3%">12 AM</p>
+				<p class="two-digit-time-cell" style="top: 18.4%">13 PM</p>
+				<p class="two-digit-time-cell" style="top: 20.5%">14 PM</p>
+				<p class="two-digit-time-cell" style="top: 22.5%">15 PM</p>
+				<p class="two-digit-time-cell" style="top: 24.5%">16 PM</p>
+				<p class="two-digit-time-cell" style="top: 26.5%">17 PM</p>
+				<p class="two-digit-time-cell" style="top: 28.7%">18 PM</p>
+				<p class="two-digit-time-cell" style="top: 30.7%">19 PM</p>
+				<p class="two-digit-time-cell" style="top: 32.7%">20 PM</p>
+				<p class="two-digit-time-cell" style="top: 34.9%">21 PM</p>
+				<p class="two-digit-time-cell" style="top: 36.9%">22 PM</p>
+				<p class="two-digit-time-cell" style="top: 38.9%">23 PM</p>
 			</div>
-			<div
-				style="
-					width: 1310px;
-					height: 1170px;
-					background-color: white;
-					position: absolute;
-					left: 191px;
-					top: 104px;
-					z-index: 1;
-					border-radius: 10px; /* Bo góc */
-					box-shadow: 0 4px 10px rgba(0, 0, 0, 0.15); /* Đổ bóng */
-				"></div>
-			<p
-				class="two-digit-time-cell"
-				style="top: 135px; left: 210px; width: 80px">
-				GMT +07
-			</p>
-			<p class="one-digit-time-cell" style="top: 195px">7 AM</p>
-			<p class="one-digit-time-cell" style="top: 255px">8 AM</p>
-			<p class="one-digit-time-cell" style="top: 315px">9 AM</p>
-			<p class="two-digit-time-cell" style="top: 375px">10 AM</p>
-			<p class="two-digit-time-cell" style="top: 435px">11 AM</p>
-			<p class="two-digit-time-cell" style="top: 495px">12 AM</p>
-			<p class="two-digit-time-cell" style="top: 555px">13 PM</p>
-			<p class="two-digit-time-cell" style="top: 615px">14 PM</p>
-			<p class="two-digit-time-cell" style="top: 675px">15 PM</p>
-			<p class="two-digit-time-cell" style="top: 735px">16 PM</p>
-			<p class="two-digit-time-cell" style="top: 795px">17 PM</p>
-			<p class="two-digit-time-cell" style="top: 855px">18 PM</p>
-			<p class="two-digit-time-cell" style="top: 915px">19 PM</p>
-			<p class="two-digit-time-cell" style="top: 975px">20 PM</p>
-			<p class="two-digit-time-cell" style="top: 1035px">21 PM</p>
-			<p class="two-digit-time-cell" style="top: 1095px">22 PM</p>
-			<p class="two-digit-time-cell" style="top: 1155px">23 PM</p>
 
 			<div class="calendar">
 				<div class="calendar-header">
